// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#basic properly renders amps-and-angle-encoding.txt 1`] = `
"AT\\\\&T has an ampersand in their name.



AT\\\\&amp;T is another way to write it.



This \\\\& that.



4 < 5.



6 > 5.



Here's a link\\\\ref{1} with an ampersand in the URL.



Here's a link with an amersand in the link text: AT\\\\&T\\\\ref{2}.



Here's an inline \\\\externalLink{link}{http://zestedesavoir.com/script?foo=1\\\\&bar=2}.



Here's an inline \\\\externalLink{link}{http://zestedesavoir.com/script?foo=1\\\\&bar=2}.



\\\\footnote{\\\\label{1}\\\\externalLink{http://example.com/?foo=1\\\\&bar=2}{http://example.com/?foo=1\\\\&bar=2}}

\\\\footnote{\\\\label{2}\\\\externalLink{http://att.com/}{http://att.com/}}"
`;

exports[`#basic properly renders angle-links-and-img.txt 1`] = `
"\\\\externalLink{link}{simple link}
\\\\inlineImage{http://example.com/image.jpg}
\\\\externalLink{link}{http://example.com/(()((())923)(}
\\\\inlineImage{link(()))(}"
`;

exports[`#basic properly renders auto-links.txt 1`] = `
"Link: \\\\externalLink{http://example.com/}{http://example.com/}.



Https link: \\\\externalLink{https://example.com}{https://example.com}



Ftp link: \\\\externalLink{ftp://example.com}{ftp://example.com}



With an ampersand: \\\\externalLink{http://example.com/?foo=1\\\\&bar=2}{http://example.com/?foo=1\\\\&bar=2}



\\\\begin{itemize}
\\\\item In a list?
\\\\item \\\\externalLink{http://example.com/}{http://example.com/}
\\\\item It should.
\\\\end{itemize}


\\\\begin{Quotation}
Blockquoted: \\\\externalLink{http://example.com/}{http://example.com/}
\\\\end{Quotation}



Auto-links should not occur here: \\\\CodeInline{<http://example.com/>}



\\\\begin{CodeBlock}{text}
or here: <http://example.com/>
\\\\end{CodeBlock}"
`;

exports[`#basic properly renders backlash-escapes.txt 1`] = `
"These should all get escaped:



Backslash: \\\\textbackslash{}



Backtick: \`



Asterisk: *



Underscore: \\\\_



Left brace: \\\\{



Right brace: \\\\}



Left bracket: [



Right bracket: ]



Left paren: (



Right paren: )



Greater-than: >



Hash: \\\\#



Period: .



Bang: !



Plus: +



Minus: -



These should not, because they occur within a code block:



\\\\begin{CodeBlock}{text}
Backslash: \\\\\\\\

Backtick: \\\\\`

Asterisk: \\\\*

Underscore: \\\\_

Left brace: \\\\{

Right brace: \\\\}

Left bracket: \\\\[

Right bracket: \\\\]

Left paren: \\\\(

Right paren: \\\\)

Greater-than: \\\\>

Hash: \\\\#

Period: \\\\.

Bang: \\\\!

Plus: \\\\+

Minus: \\\\-
\\\\end{CodeBlock}



Nor should these, which occur in code spans:



Backslash: \\\\CodeInline{\\\\textbackslash{}\\\\textbackslash{}}



Backtick: \\\\CodeInline{\\\\textbackslash{}\`}



Asterisk: \\\\CodeInline{\\\\textbackslash{}*}



Underscore: \\\\CodeInline{\\\\textbackslash{}\\\\_}



Left brace: \\\\CodeInline{\\\\textbackslash{}\\\\{}



Right brace: \\\\CodeInline{\\\\textbackslash{}\\\\}}



Left bracket: \\\\CodeInline{\\\\textbackslash{}[}



Right bracket: \\\\CodeInline{\\\\textbackslash{}]}



Left paren: \\\\CodeInline{\\\\textbackslash{}(}



Right paren: \\\\CodeInline{\\\\textbackslash{})}



Greater-than: \\\\CodeInline{\\\\textbackslash{}>}



Hash: \\\\CodeInline{\\\\textbackslash{}\\\\#}



Period: \\\\CodeInline{\\\\textbackslash{}.}



Bang: \\\\CodeInline{\\\\textbackslash{}!}



Plus: \\\\CodeInline{\\\\textbackslash{}+}



Minus: \\\\CodeInline{\\\\textbackslash{}-}"
`;

exports[`#basic properly renders blockquotes-with-code-blocks.txt 1`] = `
"\\\\begin{Quotation}
Example:

\\\\begin{CodeBlock}{text}
sub status {
    print \\"working\\";
}
\\\\end{CodeBlock}

Or:

\\\\begin{CodeBlock}{text}
sub status {
    return \\"working\\";
}
\\\\end{CodeBlock}
\\\\end{Quotation}"
`;

exports[`#basic properly renders codeblock-in-list.txt 1`] = `
"\\\\begin{itemize}
\\\\item A list item with a code block

\\\\begin{CodeBlock}{text}
Some *code*
\\\\end{CodeBlock}
\\\\item Another list item

\\\\begin{CodeBlock}{text}
More code

And more code
\\\\end{CodeBlock}
\\\\end{itemize}"
`;

exports[`#basic properly renders hard-wrapped.txt 1`] = `
"In Markdown 1.0.0 and earlier. Version
8. This line turns into a list item.
Because a hard-wrapped line in the
middle of a paragraph looked like a
list item.



Here's one with a bullet.



\\\\begin{itemize}
\\\\item criminey.
\\\\end{itemize}"
`;

exports[`#basic properly renders horizontal-rules.txt 1`] = `
"Dashes:



\\\\horizontalLine



\\\\horizontalLine



\\\\horizontalLine



\\\\horizontalLine



\\\\begin{CodeBlock}{text}
---
\\\\end{CodeBlock}



\\\\horizontalLine



\\\\horizontalLine



\\\\horizontalLine



\\\\horizontalLine



\\\\begin{CodeBlock}{text}
- - -
\\\\end{CodeBlock}



Asterisks:



\\\\horizontalLine



\\\\horizontalLine



\\\\horizontalLine



\\\\horizontalLine



\\\\begin{CodeBlock}{text}
***
\\\\end{CodeBlock}



\\\\horizontalLine



\\\\horizontalLine



\\\\horizontalLine



\\\\horizontalLine



\\\\begin{CodeBlock}{text}
* * *
\\\\end{CodeBlock}



Underscores:



\\\\horizontalLine



\\\\horizontalLine



\\\\horizontalLine



\\\\horizontalLine



\\\\begin{CodeBlock}{text}
___
\\\\end{CodeBlock}



\\\\horizontalLine



\\\\horizontalLine



\\\\horizontalLine



\\\\horizontalLine



\\\\begin{CodeBlock}{text}
_ _ _
\\\\end{CodeBlock}"
`;

exports[`#basic properly renders inline-html-advanced.txt 1`] = `
"Simple block on one line:



<div>foo</div>



And nested without indentation:



<div>
<div>
<div>
foo
</div>
</div>
<div>bar</div>
</div>"
`;

exports[`#basic properly renders inline-html-comments.txt 1`] = `
"Paragraph one.



<!-- This is a simple comment -->

<!--
	This is another comment.
-->

Paragraph two.



<!-- one comment block -- -- with two comments -->

The end."
`;

exports[`#basic properly renders inline-html-simple.txt 1`] = `
"Here's a simple block:



<div>
	foo
</div>

This should be a code block, though:



\\\\begin{CodeBlock}{text}
<div>
	foo
</div>
\\\\end{CodeBlock}



As should this:



\\\\begin{CodeBlock}{text}
<div>foo</div>
\\\\end{CodeBlock}



Now, nested:



<div>
	<div>
		<div>
			foo
		</div>
	</div>
</div>

This should just be an HTML comment:



<!-- Comment -->

Multiline:



<!--
Blah
Blah
-->

Code block:



\\\\begin{CodeBlock}{text}
<!-- Comment -->
\\\\end{CodeBlock}



Just plain comment, with trailing spaces on the line:



<!-- foo -->   

Code:



\\\\begin{CodeBlock}{text}
<hr />
\\\\end{CodeBlock}



Hr's:



<hr>

<hr/>

<hr />

<hr>   

<hr/>  

<hr /> 

<hr class=\\"foo\\" id=\\"bar\\" />

<hr class=\\"foo\\" id=\\"bar\\"/>

<hr class=\\"foo\\" id=\\"bar\\" >

<some \\\\externalLink{weird}{http://example.com} stuff>"
`;

exports[`#basic properly renders links-inline.txt 1`] = `
"Just a \\\\externalLink{URL}{http://zestedesavoir.com/url/}.



\\\\externalLink{URL and title}{http://zestedesavoir.com/url/}.



\\\\externalLink{URL and title}{http://zestedesavoir.com/url/}.



\\\\externalLink{URL and title}{http://zestedesavoir.com/url/}.



."
`;

exports[`#basic properly renders links-reference.txt 1`] = `
"Foo bar\\\\ref{1}.



Foo bar\\\\ref{1}.



Foo bar\\\\ref{1}.



\\\\footnote{\\\\label{1}\\\\externalLink{/url/}{http://zestedesavoir.com/url/}}

With embedded [brackets]\\\\ref{b}.



Indented once\\\\ref{once}.



Indented twice\\\\ref{twice}.



Indented thrice\\\\ref{thrice}.



Indented four\\\\ref{four} times.



\\\\footnote{\\\\label{once}\\\\externalLink{/url}{http://zestedesavoir.com/url}}

\\\\footnote{\\\\label{twice}\\\\externalLink{/url}{http://zestedesavoir.com/url}}

\\\\footnote{\\\\label{thrice}\\\\externalLink{/url}{http://zestedesavoir.com/url}}

\\\\begin{CodeBlock}{text}
[four]: /url
\\\\end{CodeBlock}



\\\\footnote{\\\\label{b}\\\\externalLink{/url/}{http://zestedesavoir.com/url/}}

With angle brackets\\\\ref{angle brackets}.



And without\\\\ref{without}.



\\\\footnote{\\\\label{angle brackets}\\\\externalLink{http://example.com/}{http://example.com/}}

\\\\footnote{\\\\label{without}\\\\externalLink{http://example.com/}{http://example.com/}}

With line
breaks\\\\ref{line breaks}



and line 
breaks\\\\ref{line breaks} with one space.



and [line \\\\\\\\
breaks[] with two spaces.



\\\\footnote{\\\\label{line breaks}\\\\externalLink{http://example.com}{http://example.com}}

short ref\\\\ref{short ref}



short 
ref\\\\ref{short ref}



\\\\footnote{\\\\label{short ref}\\\\externalLink{http://example.com}{http://example.com}}

a ref\\\\ref{a ref}



\\\\footnote{\\\\label{a ref}\\\\externalLink{http://example.com}{http://example.com}}"
`;

exports[`#basic properly renders nested-blockquotes.txt 1`] = `
"\\\\begin{Quotation}
foo

\\\\begin{Quotation}
bar
\\\\end{Quotation}

foo
\\\\end{Quotation}"
`;

exports[`#basic properly renders ordered-and-unordered-list.txt 1`] = `
"Unordered



Asterisks tight:



\\\\begin{itemize}
\\\\item asterisk 1
\\\\item asterisk 2
\\\\item asterisk 3
\\\\end{itemize}


Asterisks loose:



\\\\begin{itemize}
\\\\item asterisk 1
\\\\item asterisk 2
\\\\item asterisk 3
\\\\end{itemize}


\\\\horizontalLine



Pluses tight:



\\\\begin{itemize}
\\\\item Plus 1
\\\\item Plus 2
\\\\item Plus 3
\\\\end{itemize}


Pluses loose:



\\\\begin{itemize}
\\\\item Plus 1
\\\\item Plus 2
\\\\item Plus 3
\\\\end{itemize}


\\\\horizontalLine



Minuses tight:



\\\\begin{itemize}
\\\\item Minus 1
\\\\item Minus 2
\\\\item Minus 3
\\\\end{itemize}


Minuses loose:



\\\\begin{itemize}
\\\\item Minus 1
\\\\item Minus 2
\\\\item Minus 3
\\\\end{itemize}


\\\\horizontalLine



Ordered



Tight:



\\\\begin{enumerate}
\\\\item First
\\\\item Second
\\\\item Third
\\\\end{enumerate}


and:



\\\\begin{enumerate}
\\\\item One
\\\\item Two
\\\\item Three
\\\\end{enumerate}


Loose using tabs:



\\\\begin{enumerate}
\\\\item First
\\\\item Second
\\\\item Third
\\\\end{enumerate}


and using spaces:



\\\\begin{enumerate}
\\\\item One
\\\\item Two
\\\\item Three
\\\\end{enumerate}


Multiple paragraphs:



\\\\begin{enumerate}
\\\\item Item 1, graf one.

Item 2. graf two. The quick brown fox jumped over the lazy dog's
back.
\\\\item Item 2.
\\\\item Item 3.
\\\\end{enumerate}


\\\\horizontalLine



Nested



\\\\begin{itemize}
\\\\item Tab

\\\\begin{itemize}
\\\\item Tab

\\\\begin{itemize}
\\\\item Tab
\\\\end{itemize}
\\\\end{itemize}
\\\\end{itemize}


Here's another:



\\\\begin{enumerate}
\\\\item First
\\\\item Second:

\\\\begin{itemize}
\\\\item Fee
\\\\item Fie
\\\\item Foe
\\\\end{itemize}
\\\\item Third
\\\\end{enumerate}


Same thing but with paragraphs:



\\\\begin{enumerate}
\\\\item First
\\\\item Second:

\\\\begin{itemize}
\\\\item Fee
\\\\item Fie
\\\\item Foe
\\\\end{itemize}
\\\\item Third
\\\\end{enumerate}"
`;

exports[`#basic properly renders strong-and-em-together.txt 1`] = `
"\\\\textbf{\\\\textit{This is strong and em.}}



So is \\\\textbf{\\\\textit{this}} word.



\\\\textbf{\\\\textit{This is strong and em.}}



So is \\\\textbf{\\\\textit{this}} word."
`;

exports[`#basic properly renders tabs.txt 1`] = `
"\\\\begin{itemize}
\\\\item this is a list item
indented with tabs
\\\\item this is a list item
indented with spaces
\\\\end{itemize}


Code:



\\\\begin{CodeBlock}{text}
this code block is indented by one tab
\\\\end{CodeBlock}



And:



\\\\begin{CodeBlock}{text}
	this code block is indented by two tabs
\\\\end{CodeBlock}



And:



\\\\begin{CodeBlock}{text}
+	this is an example list item
	indented with tabs

+   this is an example list item
    indented with spaces
\\\\end{CodeBlock}"
`;

exports[`#basic properly renders tidyness.txt 1`] = `
"\\\\begin{Quotation}
A list within a blockquote:

\\\\begin{itemize}
\\\\item asterisk 1
\\\\item asterisk 2
\\\\item asterisk 3
\\\\end{itemize}
\\\\end{Quotation}"
`;

exports[`#extensions #extra properly renders abbr.txt 1`] = `
"An \\\\abbr{ABBR}{Abbreviation}: \\"\\\\abbr{REF}{Reference}\\".
ref and REFERENCE should be ignored.



The \\\\abbr{HTML}{Hyper Text Markup Language} specification
is maintained by the \\\\abbr{W3C}{World Wide Web Consortium}."
`;

exports[`#extensions #extra properly renders footnote.txt 1`] = `
"This is the body with a footnote\\\\textsuperscript{\\\\ref{footnote:1}} or two\\\\textsuperscript{\\\\ref{footnote:2}} or more\\\\textsuperscript{\\\\ref{footnote:3}} \\\\textsuperscript{\\\\ref{footnote:4}} \\\\textsuperscript{\\\\ref{footnote:5}}.



Also a reference that does not exist\\\\textsuperscript{\\\\ref{footnote:6}}.



\\\\footnotetext[1]{\\\\label{footnote:1} Footnote that ends with a list:

\\\\begin{itemize}
\\\\item item 1
\\\\item item 2
\\\\end{itemize}}

\\\\footnotetext[2]{\\\\label{footnote:2} \\\\begin{Quotation}
This footnote is a blockquote.
\\\\end{Quotation}}

\\\\footnotetext[3]{\\\\label{footnote:3} A simple oneliner.}

\\\\footnotetext[4]{\\\\label{footnote:4} A footnote with multiple paragraphs.

Paragraph two.}

\\\\footnotetext[5]{\\\\label{footnote:5} First line of first paragraph.}

Second line of first paragraph is not intended.
Nor is third..."
`;

exports[`#extensions #extra properly renders footnote_many_footnotes.txt 1`] = `
"Something\\\\textsuperscript{\\\\ref{footnote:1}}



Something\\\\textsuperscript{\\\\ref{footnote:2}}



Something\\\\textsuperscript{\\\\ref{footnote:3}}



Something\\\\textsuperscript{\\\\ref{footnote:4}}



Something\\\\textsuperscript{\\\\ref{footnote:5}}



Something\\\\textsuperscript{\\\\ref{footnote:6}}



Something\\\\textsuperscript{\\\\ref{footnote:7}}



Something\\\\textsuperscript{\\\\ref{footnote:8}}



Something\\\\textsuperscript{\\\\ref{footnote:9}}



Something\\\\textsuperscript{\\\\ref{footnote:10}}



Something\\\\textsuperscript{\\\\ref{footnote:11}}



Something\\\\textsuperscript{\\\\ref{footnote:12}}



Something\\\\textsuperscript{\\\\ref{footnote:13}}



Something\\\\textsuperscript{\\\\ref{footnote:14}}



Something\\\\textsuperscript{\\\\ref{footnote:15}}



Something\\\\textsuperscript{\\\\ref{footnote:16}}



Something\\\\textsuperscript{\\\\ref{footnote:17}}



Something\\\\textsuperscript{\\\\ref{footnote:18}}



Something\\\\textsuperscript{\\\\ref{footnote:19}}



Something\\\\textsuperscript{\\\\ref{footnote:20}}



Something\\\\textsuperscript{\\\\ref{footnote:21}}



Something\\\\textsuperscript{\\\\ref{footnote:22}}



Something\\\\textsuperscript{\\\\ref{footnote:23}}



Something\\\\textsuperscript{\\\\ref{footnote:24}}



Something\\\\textsuperscript{\\\\ref{footnote:25}}



Something\\\\textsuperscript{\\\\ref{footnote:26}}



Something\\\\textsuperscript{\\\\ref{footnote:27}}



Something\\\\textsuperscript{\\\\ref{footnote:28}}



Something\\\\textsuperscript{\\\\ref{footnote:29}}



Something\\\\textsuperscript{\\\\ref{footnote:30}}



Something\\\\textsuperscript{\\\\ref{footnote:31}}



Something\\\\textsuperscript{\\\\ref{footnote:32}}



Something\\\\textsuperscript{\\\\ref{footnote:33}}



Something\\\\textsuperscript{\\\\ref{footnote:34}}



Something\\\\textsuperscript{\\\\ref{footnote:35}}



Something\\\\textsuperscript{\\\\ref{footnote:36}}



Something\\\\textsuperscript{\\\\ref{footnote:37}}



Something\\\\textsuperscript{\\\\ref{footnote:38}}



Something\\\\textsuperscript{\\\\ref{footnote:39}}



Something\\\\textsuperscript{\\\\ref{footnote:40}}



Something\\\\textsuperscript{\\\\ref{footnote:41}}



Something\\\\textsuperscript{\\\\ref{footnote:42}}



Something\\\\textsuperscript{\\\\ref{footnote:43}}



Something\\\\textsuperscript{\\\\ref{footnote:44}}



Something\\\\textsuperscript{\\\\ref{footnote:45}}



Something\\\\textsuperscript{\\\\ref{footnote:46}}



Something\\\\textsuperscript{\\\\ref{footnote:47}}



Something\\\\textsuperscript{\\\\ref{footnote:48}}



Something\\\\textsuperscript{\\\\ref{footnote:49}}



Something\\\\textsuperscript{\\\\ref{footnote:50}}



Something\\\\textsuperscript{\\\\ref{footnote:51}}



Something\\\\textsuperscript{\\\\ref{footnote:52}}



Something\\\\textsuperscript{\\\\ref{footnote:53}}



Something\\\\textsuperscript{\\\\ref{footnote:54}}



Something\\\\textsuperscript{\\\\ref{footnote:55}}



Something\\\\textsuperscript{\\\\ref{footnote:56}}



Something\\\\textsuperscript{\\\\ref{footnote:57}}



Something\\\\textsuperscript{\\\\ref{footnote:58}}



Something\\\\textsuperscript{\\\\ref{footnote:59}}



Something\\\\textsuperscript{\\\\ref{footnote:60}}



Something\\\\textsuperscript{\\\\ref{footnote:61}}



Something\\\\textsuperscript{\\\\ref{footnote:62}}



Something\\\\textsuperscript{\\\\ref{footnote:63}}



Something\\\\textsuperscript{\\\\ref{footnote:64}}



Something\\\\textsuperscript{\\\\ref{footnote:65}}



Something\\\\textsuperscript{\\\\ref{footnote:66}}



Something\\\\textsuperscript{\\\\ref{footnote:67}}



Something\\\\textsuperscript{\\\\ref{footnote:68}}



Something\\\\textsuperscript{\\\\ref{footnote:69}}



Something\\\\textsuperscript{\\\\ref{footnote:70}}



Something\\\\textsuperscript{\\\\ref{footnote:71}}



Something\\\\textsuperscript{\\\\ref{footnote:72}}



Something\\\\textsuperscript{\\\\ref{footnote:73}}



Something\\\\textsuperscript{\\\\ref{footnote:74}}



Something\\\\textsuperscript{\\\\ref{footnote:75}}



Something\\\\textsuperscript{\\\\ref{footnote:76}}



Something\\\\textsuperscript{\\\\ref{footnote:77}}



Something\\\\textsuperscript{\\\\ref{footnote:78}}



Something\\\\textsuperscript{\\\\ref{footnote:79}}



Something\\\\textsuperscript{\\\\ref{footnote:80}}



Something\\\\textsuperscript{\\\\ref{footnote:81}}



Something\\\\textsuperscript{\\\\ref{footnote:82}}



Something\\\\textsuperscript{\\\\ref{footnote:83}}



Something\\\\textsuperscript{\\\\ref{footnote:84}}



Something\\\\textsuperscript{\\\\ref{footnote:85}}



Something\\\\textsuperscript{\\\\ref{footnote:86}}



Something\\\\textsuperscript{\\\\ref{footnote:87}}



Something\\\\textsuperscript{\\\\ref{footnote:88}}



Something\\\\textsuperscript{\\\\ref{footnote:89}}



Something\\\\textsuperscript{\\\\ref{footnote:90}}



Something\\\\textsuperscript{\\\\ref{footnote:91}}



Something\\\\textsuperscript{\\\\ref{footnote:92}}



Something\\\\textsuperscript{\\\\ref{footnote:93}}



Something\\\\textsuperscript{\\\\ref{footnote:94}}



Something\\\\textsuperscript{\\\\ref{footnote:95}}



Something\\\\textsuperscript{\\\\ref{footnote:96}}



Something\\\\textsuperscript{\\\\ref{footnote:97}}



Something\\\\textsuperscript{\\\\ref{footnote:98}}



Something\\\\textsuperscript{\\\\ref{footnote:99}}



Something\\\\textsuperscript{\\\\ref{footnote:100}}



Something\\\\textsuperscript{\\\\ref{footnote:101}}



Something\\\\textsuperscript{\\\\ref{footnote:102}}



Something\\\\textsuperscript{\\\\ref{footnote:103}}



Something\\\\textsuperscript{\\\\ref{footnote:104}}



Something\\\\textsuperscript{\\\\ref{footnote:105}}



Something\\\\textsuperscript{\\\\ref{footnote:106}}



Something\\\\textsuperscript{\\\\ref{footnote:107}}



Something\\\\textsuperscript{\\\\ref{footnote:108}}



Something\\\\textsuperscript{\\\\ref{footnote:109}}



Something\\\\textsuperscript{\\\\ref{footnote:110}}



Something\\\\textsuperscript{\\\\ref{footnote:111}}



Something\\\\textsuperscript{\\\\ref{footnote:112}}



Something\\\\textsuperscript{\\\\ref{footnote:113}}



Something\\\\textsuperscript{\\\\ref{footnote:114}}



Something\\\\textsuperscript{\\\\ref{footnote:115}}



Something\\\\textsuperscript{\\\\ref{footnote:116}}



Something\\\\textsuperscript{\\\\ref{footnote:117}}



Something\\\\textsuperscript{\\\\ref{footnote:118}}



Something\\\\textsuperscript{\\\\ref{footnote:119}}



Something\\\\textsuperscript{\\\\ref{footnote:120}}



Something\\\\textsuperscript{\\\\ref{footnote:121}}



Something\\\\textsuperscript{\\\\ref{footnote:122}}



Something\\\\textsuperscript{\\\\ref{footnote:123}}



Something\\\\textsuperscript{\\\\ref{footnote:124}}



Something\\\\textsuperscript{\\\\ref{footnote:125}}



Something\\\\textsuperscript{\\\\ref{footnote:126}}



Something\\\\textsuperscript{\\\\ref{footnote:127}}



Something\\\\textsuperscript{\\\\ref{footnote:128}}



Something\\\\textsuperscript{\\\\ref{footnote:129}}



Something\\\\textsuperscript{\\\\ref{footnote:130}}



Something\\\\textsuperscript{\\\\ref{footnote:131}}



Something\\\\textsuperscript{\\\\ref{footnote:132}}



Something\\\\textsuperscript{\\\\ref{footnote:133}}



Something\\\\textsuperscript{\\\\ref{footnote:134}}



Something\\\\textsuperscript{\\\\ref{footnote:135}}



Something\\\\textsuperscript{\\\\ref{footnote:136}}



Something\\\\textsuperscript{\\\\ref{footnote:137}}



Something\\\\textsuperscript{\\\\ref{footnote:138}}



Something\\\\textsuperscript{\\\\ref{footnote:139}}



Something\\\\textsuperscript{\\\\ref{footnote:140}}



Something\\\\textsuperscript{\\\\ref{footnote:141}}



Something\\\\textsuperscript{\\\\ref{footnote:142}}



Something\\\\textsuperscript{\\\\ref{footnote:143}}



Something\\\\textsuperscript{\\\\ref{footnote:144}}



Something\\\\textsuperscript{\\\\ref{footnote:145}}



Something\\\\textsuperscript{\\\\ref{footnote:146}}



Something\\\\textsuperscript{\\\\ref{footnote:147}}



Something\\\\textsuperscript{\\\\ref{footnote:148}}



Something\\\\textsuperscript{\\\\ref{footnote:149}}



Something\\\\textsuperscript{\\\\ref{footnote:150}}



\\\\footnotetext[1]{\\\\label{footnote:1} Another thing}

\\\\footnotetext[2]{\\\\label{footnote:2} Another thing}

\\\\footnotetext[3]{\\\\label{footnote:3} Another thing}

\\\\footnotetext[4]{\\\\label{footnote:4} Another thing}

\\\\footnotetext[5]{\\\\label{footnote:5} Another thing}

\\\\footnotetext[6]{\\\\label{footnote:6} Another thing}

\\\\footnotetext[7]{\\\\label{footnote:7} Another thing}

\\\\footnotetext[8]{\\\\label{footnote:8} Another thing}

\\\\footnotetext[9]{\\\\label{footnote:9} Another thing}

\\\\footnotetext[10]{\\\\label{footnote:10} Another thing}

\\\\footnotetext[11]{\\\\label{footnote:11} Another thing}

\\\\footnotetext[12]{\\\\label{footnote:12} Another thing}

\\\\footnotetext[13]{\\\\label{footnote:13} Another thing}

\\\\footnotetext[14]{\\\\label{footnote:14} Another thing}

\\\\footnotetext[15]{\\\\label{footnote:15} Another thing}

\\\\footnotetext[16]{\\\\label{footnote:16} Another thing}

\\\\footnotetext[17]{\\\\label{footnote:17} Another thing}

\\\\footnotetext[18]{\\\\label{footnote:18} Another thing}

\\\\footnotetext[19]{\\\\label{footnote:19} Another thing}

\\\\footnotetext[20]{\\\\label{footnote:20} Another thing}

\\\\footnotetext[21]{\\\\label{footnote:21} Another thing}

\\\\footnotetext[22]{\\\\label{footnote:22} Another thing}

\\\\footnotetext[23]{\\\\label{footnote:23} Another thing}

\\\\footnotetext[24]{\\\\label{footnote:24} Another thing}

\\\\footnotetext[25]{\\\\label{footnote:25} Another thing}

\\\\footnotetext[26]{\\\\label{footnote:26} Another thing}

\\\\footnotetext[27]{\\\\label{footnote:27} Another thing}

\\\\footnotetext[28]{\\\\label{footnote:28} Another thing}

\\\\footnotetext[29]{\\\\label{footnote:29} Another thing}

\\\\footnotetext[30]{\\\\label{footnote:30} Another thing}

\\\\footnotetext[31]{\\\\label{footnote:31} Another thing}

\\\\footnotetext[32]{\\\\label{footnote:32} Another thing}

\\\\footnotetext[33]{\\\\label{footnote:33} Another thing}

\\\\footnotetext[34]{\\\\label{footnote:34} Another thing}

\\\\footnotetext[35]{\\\\label{footnote:35} Another thing}

\\\\footnotetext[36]{\\\\label{footnote:36} Another thing}

\\\\footnotetext[37]{\\\\label{footnote:37} Another thing}

\\\\footnotetext[38]{\\\\label{footnote:38} Another thing}

\\\\footnotetext[39]{\\\\label{footnote:39} Another thing}

\\\\footnotetext[40]{\\\\label{footnote:40} Another thing}

\\\\footnotetext[41]{\\\\label{footnote:41} Another thing}

\\\\footnotetext[42]{\\\\label{footnote:42} Another thing}

\\\\footnotetext[43]{\\\\label{footnote:43} Another thing}

\\\\footnotetext[44]{\\\\label{footnote:44} Another thing}

\\\\footnotetext[45]{\\\\label{footnote:45} Another thing}

\\\\footnotetext[46]{\\\\label{footnote:46} Another thing}

\\\\footnotetext[47]{\\\\label{footnote:47} Another thing}

\\\\footnotetext[48]{\\\\label{footnote:48} Another thing}

\\\\footnotetext[49]{\\\\label{footnote:49} Another thing}

\\\\footnotetext[50]{\\\\label{footnote:50} Another thing}

\\\\footnotetext[51]{\\\\label{footnote:51} Another thing}

\\\\footnotetext[52]{\\\\label{footnote:52} Another thing}

\\\\footnotetext[53]{\\\\label{footnote:53} Another thing}

\\\\footnotetext[54]{\\\\label{footnote:54} Another thing}

\\\\footnotetext[55]{\\\\label{footnote:55} Another thing}

\\\\footnotetext[56]{\\\\label{footnote:56} Another thing}

\\\\footnotetext[57]{\\\\label{footnote:57} Another thing}

\\\\footnotetext[58]{\\\\label{footnote:58} Another thing}

\\\\footnotetext[59]{\\\\label{footnote:59} Another thing}

\\\\footnotetext[60]{\\\\label{footnote:60} Another thing}

\\\\footnotetext[61]{\\\\label{footnote:61} Another thing}

\\\\footnotetext[62]{\\\\label{footnote:62} Another thing}

\\\\footnotetext[63]{\\\\label{footnote:63} Another thing}

\\\\footnotetext[64]{\\\\label{footnote:64} Another thing}

\\\\footnotetext[65]{\\\\label{footnote:65} Another thing}

\\\\footnotetext[66]{\\\\label{footnote:66} Another thing}

\\\\footnotetext[67]{\\\\label{footnote:67} Another thing}

\\\\footnotetext[68]{\\\\label{footnote:68} Another thing}

\\\\footnotetext[69]{\\\\label{footnote:69} Another thing}

\\\\footnotetext[70]{\\\\label{footnote:70} Another thing}

\\\\footnotetext[71]{\\\\label{footnote:71} Another thing}

\\\\footnotetext[72]{\\\\label{footnote:72} Another thing}

\\\\footnotetext[73]{\\\\label{footnote:73} Another thing}

\\\\footnotetext[74]{\\\\label{footnote:74} Another thing}

\\\\footnotetext[75]{\\\\label{footnote:75} Another thing}

\\\\footnotetext[76]{\\\\label{footnote:76} Another thing}

\\\\footnotetext[77]{\\\\label{footnote:77} Another thing}

\\\\footnotetext[78]{\\\\label{footnote:78} Another thing}

\\\\footnotetext[79]{\\\\label{footnote:79} Another thing}

\\\\footnotetext[80]{\\\\label{footnote:80} Another thing}

\\\\footnotetext[81]{\\\\label{footnote:81} Another thing}

\\\\footnotetext[82]{\\\\label{footnote:82} Another thing}

\\\\footnotetext[83]{\\\\label{footnote:83} Another thing}

\\\\footnotetext[84]{\\\\label{footnote:84} Another thing}

\\\\footnotetext[85]{\\\\label{footnote:85} Another thing}

\\\\footnotetext[86]{\\\\label{footnote:86} Another thing}

\\\\footnotetext[87]{\\\\label{footnote:87} Another thing}

\\\\footnotetext[88]{\\\\label{footnote:88} Another thing}

\\\\footnotetext[89]{\\\\label{footnote:89} Another thing}

\\\\footnotetext[90]{\\\\label{footnote:90} Another thing}

\\\\footnotetext[91]{\\\\label{footnote:91} Another thing}

\\\\footnotetext[92]{\\\\label{footnote:92} Another thing}

\\\\footnotetext[93]{\\\\label{footnote:93} Another thing}

\\\\footnotetext[94]{\\\\label{footnote:94} Another thing}

\\\\footnotetext[95]{\\\\label{footnote:95} Another thing}

\\\\footnotetext[96]{\\\\label{footnote:96} Another thing}

\\\\footnotetext[97]{\\\\label{footnote:97} Another thing}

\\\\footnotetext[98]{\\\\label{footnote:98} Another thing}

\\\\footnotetext[99]{\\\\label{footnote:99} Another thing}

\\\\footnotetext[100]{\\\\label{footnote:100} Another thing}

\\\\footnotetext[101]{\\\\label{footnote:101} Another thing}

\\\\footnotetext[102]{\\\\label{footnote:102} Another thing}

\\\\footnotetext[103]{\\\\label{footnote:103} Another thing}

\\\\footnotetext[104]{\\\\label{footnote:104} Another thing}

\\\\footnotetext[105]{\\\\label{footnote:105} Another thing}

\\\\footnotetext[106]{\\\\label{footnote:106} Another thing}

\\\\footnotetext[107]{\\\\label{footnote:107} Another thing}

\\\\footnotetext[108]{\\\\label{footnote:108} Another thing}

\\\\footnotetext[109]{\\\\label{footnote:109} Another thing}

\\\\footnotetext[110]{\\\\label{footnote:110} Another thing}

\\\\footnotetext[111]{\\\\label{footnote:111} Another thing}

\\\\footnotetext[112]{\\\\label{footnote:112} Another thing}

\\\\footnotetext[113]{\\\\label{footnote:113} Another thing}

\\\\footnotetext[114]{\\\\label{footnote:114} Another thing}

\\\\footnotetext[115]{\\\\label{footnote:115} Another thing}

\\\\footnotetext[116]{\\\\label{footnote:116} Another thing}

\\\\footnotetext[117]{\\\\label{footnote:117} Another thing}

\\\\footnotetext[118]{\\\\label{footnote:118} Another thing}

\\\\footnotetext[119]{\\\\label{footnote:119} Another thing}

\\\\footnotetext[120]{\\\\label{footnote:120} Another thing}

\\\\footnotetext[121]{\\\\label{footnote:121} Another thing}

\\\\footnotetext[122]{\\\\label{footnote:122} Another thing}

\\\\footnotetext[123]{\\\\label{footnote:123} Another thing}

\\\\footnotetext[124]{\\\\label{footnote:124} Another thing}

\\\\footnotetext[125]{\\\\label{footnote:125} Another thing}

\\\\footnotetext[126]{\\\\label{footnote:126} Another thing}

\\\\footnotetext[127]{\\\\label{footnote:127} Another thing}

\\\\footnotetext[128]{\\\\label{footnote:128} Another thing}

\\\\footnotetext[129]{\\\\label{footnote:129} Another thing}

\\\\footnotetext[130]{\\\\label{footnote:130} Another thing}

\\\\footnotetext[131]{\\\\label{footnote:131} Another thing}

\\\\footnotetext[132]{\\\\label{footnote:132} Another thing}

\\\\footnotetext[133]{\\\\label{footnote:133} Another thing}

\\\\footnotetext[134]{\\\\label{footnote:134} Another thing}

\\\\footnotetext[135]{\\\\label{footnote:135} Another thing}

\\\\footnotetext[136]{\\\\label{footnote:136} Another thing}

\\\\footnotetext[137]{\\\\label{footnote:137} Another thing}

\\\\footnotetext[138]{\\\\label{footnote:138} Another thing}

\\\\footnotetext[139]{\\\\label{footnote:139} Another thing}

\\\\footnotetext[140]{\\\\label{footnote:140} Another thing}

\\\\footnotetext[141]{\\\\label{footnote:141} Another thing}

\\\\footnotetext[142]{\\\\label{footnote:142} Another thing}

\\\\footnotetext[143]{\\\\label{footnote:143} Another thing}

\\\\footnotetext[144]{\\\\label{footnote:144} Another thing}

\\\\footnotetext[145]{\\\\label{footnote:145} Another thing}

\\\\footnotetext[146]{\\\\label{footnote:146} Another thing}

\\\\footnotetext[147]{\\\\label{footnote:147} Another thing}

\\\\footnotetext[148]{\\\\label{footnote:148} Another thing}

\\\\footnotetext[149]{\\\\label{footnote:149} Another thing}

\\\\footnotetext[150]{\\\\label{footnote:150} Another thing}"
`;

exports[`#extensions #extra properly renders tables.txt 1`] = `
"\\\\begin{longtabu}{|c|c|} \\\\hline
First Header & Second Header \\\\\\\\ \\\\hline
Content Cell & Content Cell \\\\\\\\ \\\\hline
Content Cell & Content Cell \\\\\\\\ \\\\hline
\\\\end{longtabu}



\\\\begin{longtabu}{|c|c|} \\\\hline
First Header & Second Header \\\\\\\\ \\\\hline
Content Cell & Content Cell \\\\\\\\ \\\\hline
Content Cell & Content Cell \\\\\\\\ \\\\hline
\\\\end{longtabu}



\\\\begin{longtabu}{|c|c|} \\\\hline
Item & Value \\\\\\\\ \\\\hline
Computer & \\\\$1600 \\\\\\\\ \\\\hline
Phone & \\\\$12 \\\\\\\\ \\\\hline
Pipe & \\\\$1 \\\\\\\\ \\\\hline
\\\\end{longtabu}



\\\\begin{longtabu}{|c|c|} \\\\hline
Function name & Description \\\\\\\\ \\\\hline
\\\\CodeInline{help()} & Display the help window. \\\\\\\\ \\\\hline
\\\\CodeInline{destroy()} & \\\\textbf{Destroy your computer!} \\\\\\\\ \\\\hline
\\\\end{longtabu}



\\\\begin{longtabu}{|c|c|c|} \\\\hline
foo & bar & baz \\\\\\\\ \\\\hline
 & Q &  \\\\\\\\ \\\\hline
W &  & W \\\\\\\\ \\\\hline
\\\\end{longtabu}



Three spaces in front of a table:



\\\\begin{longtabu}{|c|c|} \\\\hline
First Header & Second Header \\\\\\\\ \\\\hline
Content Cell & Content Cell \\\\\\\\ \\\\hline
Content Cell & Content Cell \\\\\\\\ \\\\hline
\\\\end{longtabu}



\\\\begin{longtabu}{|c|c|} \\\\hline
First Header & Second Header \\\\\\\\ \\\\hline
Content Cell & Content Cell \\\\\\\\ \\\\hline
Content Cell & Content Cell \\\\\\\\ \\\\hline
\\\\end{longtabu}



Four spaces is a code block:



\\\\begin{CodeBlock}{text}
First Header | Second Header
------------ | -------------
Content Cell | Content Cell
Content Cell | Content Cell
\\\\end{CodeBlock}"
`;

exports[`#extensions #extra properly renders tables-2.txt 1`] = `
"\\\\begin{longtabu}{|c|c|c|} \\\\hline
foo & bar & baz \\\\\\\\ \\\\hline
Q \\\\\\\\ \\\\hline
W &  & W \\\\\\\\ \\\\hline
\\\\end{longtabu}"
`;

exports[`#extensions properly renders fenced_code.txt 1`] = `
"index 0000000..6e956a9



\\\\begin{CodeBlock}{text}
--- /dev/null
+++ b/test/data/stripped_text/mike-30-lili
@@ -0,0 +1,27 @@
+Summary:
+ drift_mod.py |    1 +
+ 1 files changed, 1 insertions(+), 0 deletions(-)
+
+commit da4bfb04debdd994683740878d09988b2641513d
+Author: Mike Dirolf <mike@dirolf.com>
+Date:   Tue Jan 17 13:42:28 2012 -0500
+
+\`\`\`
+minor: just wanted to push something.
+\`\`\`
+
+diff --git a/drift_mod.py b/drift_mod.py
+index 34dfba6..8a88a69 100644
+
+\`\`\`
+--- a/drift_mod.py
++++ b/drift_mod.py
+@@ -281,6 +281,7 @@ CONTEXT_DIFF_LINE_PATTERN = re.compile(r'^('
+                                        '|\\\\+ .*'
+                                        '|- .*'
+                                        ')$')
++
+ def wrap_context_diffs(message_text):
+     return _wrap_diff(CONTEXT_DIFF_HEADER_PATTERN,
+                       CONTEXT_DIFF_LINE_PATTERN,
+\`\`\`
\\\\end{CodeBlock}"
`;

exports[`#extensions properly renders github_flavored.txt 1`] = `
"index 0000000..6e956a9



\\\\begin{CodeBlock}{diff}
--- /dev/null
+++ b/test/data/stripped_text/mike-30-lili
@@ -0,0 +1,27 @@
+Summary:
+ drift_mod.py |    1 +
+ 1 files changed, 1 insertions(+), 0 deletions(-)
+
+commit da4bfb04debdd994683740878d09988b2641513d
+Author: Mike Dirolf <mike@dirolf.com>
+Date:   Tue Jan 17 13:42:28 2012 -0500
+
+\`\`\`
+minor: just wanted to push something.
+\`\`\`
+
+diff --git a/drift_mod.py b/drift_mod.py
+index 34dfba6..8a88a69 100644
+
+\`\`\`
+--- a/drift_mod.py
++++ b/drift_mod.py
+@@ -281,6 +281,7 @@ CONTEXT_DIFF_LINE_PATTERN = re.compile(r'^('
+                                        '|\\\\+ .*'
+                                        '|- .*'
+                                        ')$')
++
+ def wrap_context_diffs(message_text):
+     return _wrap_diff(CONTEXT_DIFF_HEADER_PATTERN,
+                       CONTEXT_DIFF_LINE_PATTERN,
+\`\`\`
\\\\end{CodeBlock}



Test support for foo+bar lexer names.



\\\\begin{CodeBlock}{html+jinja}
<title>{% block title %}{% endblock %}</title>
<ul>
{% for user in users %}
  <li><a href=\\"{{ user.url }}\\">{{ user.username }}</a></li>
{% endfor %}
</ul>
\\\\end{CodeBlock}



Test support for foo+bar lexer names in citation.



\\\\begin{Quotation}
\\\\begin{CodeBlock}{html+jinja}
<title>{% block title %}{% endblock %}</title>
<ul>

{% for user in users %}
  <li><a href=\\"{{ user.url }}\\">{{ user.username }}</a></li>
{% endfor %}

</ul>
\\\\end{CodeBlock}
\\\\end{Quotation}



Test support for foo+bar lexer names with hightlight.



\\\\begin{CodeBlock}[][\\"2-4\\"]{html+jinja}
<title>{% block title %}{% endblock %}</title>
<ul>

{% for user in users %}
  <li><a href=\\"{{ user.url }}\\">{{ user.username }}</a></li>
{% endfor %}

</ul>
\\\\end{CodeBlock}



Test support for foo+bar lexer names with linenostart.



\\\\begin{CodeBlock}{html+jinja}
<title>{% block title %}{% endblock %}</title>
<ul>

{% for user in users %}
  <li><a href=\\"{{ user.url }}\\">{{ user.username }}</a></li>
{% endfor %}

</ul>
\\\\end{CodeBlock}



Test support for foo+bar lexer names with both.



\\\\begin{CodeBlock}[][\\"2-4\\" linenostart=10]{html+jinja}
<title>{% block title %}{% endblock %}</title>
<ul>
{% for user in users %}
  <li><a href=\\"{{ user.url }}\\">{{ user.username }}</a></li>
{% endfor %}
</ul>
\\\\end{CodeBlock}



Code without matching end



\\\\begin{CodeBlock}{html}
~~~

Code into paragraph
\`\`\`html+jinja hl_lines= \\"2-4\\" linenostart=10
<title>{% block title %}{% endblock %}</title>
<ul>
{% for user in users %}
  <li><a href=\\"{{ user.url }}\\">{{ user.username }}</a></li>
{% endfor %}
</ul>
\`\`\`
with end
\\\\end{CodeBlock}"
`;

exports[`#heading-shift shifts before range 1`] = `"\\\\levelOneTitle{should be h1}"`;

exports[`#heading-shift shifts in range 1`] = `"\\\\levelFourTitle{should be h4}"`;

exports[`#heading-shift shifts past range 1`] = `"\\\\levelSixTitle{should be h6}"`;

exports[`#misc properly renders CRLF_line_ends.txt 1`] = `
"foo



<div>
bar
</div>"
`;

exports[`#misc properly renders adjacent-headers.txt 1`] = `
"\\\\levelOneTitle{this is a huge header}


\\\\levelTwoTitle{this is a smaller header}"
`;

exports[`#misc properly renders amp-in-url.txt 1`] = `"\\\\externalLink{link}{http://www.freewisdom.org/this\\\\&that}"`;

exports[`#misc properly renders ampersand.txt 1`] = `
"\\\\&



AT\\\\&T"
`;

exports[`#misc properly renders arabic.txt 1`] = `
"\\\\levelOneTitle{بايثون}


\\\\textbf{بايثون} لغة برمجة حديثة بسيطة، واضحة، سريعة ، تستخدم أسلوب البرمجة الكائنية (OOP) وقابلة للتطوير بالإضافة إلى أنها مجانية و مفتوحة المصدر. صُنفت بالأساس كلغة تفسيرية ، بايثون مصممة أصلاً للأداء بعض المهام الخاصة أو المحدودة. إلا أنه يمكن استخدامها بايثون لإنجاز المشاريع الضخمه كأي لغة برمجية أخرى،  غالباً ما يُنصح المبتدئين في ميدان البرمجة بتعلم هذه اللغة لأنها من بين أسهل اللغات البرمجية تعلماً.



نشأت بايثون في مركز CWI (مركز العلوم والحاسب الآلي) بأمستردام على يد جويدو فان رُزوم. تم تطويرها بلغة C. أطلق فان رُزوم اسم \\"بايثون\\" على لغته تعبيرًا عن إعجابه بفِرقَة مسرحية هزلية شهيرة من بريطانيا، كانت تطلق على نفسها اسم مونتي بايثون Monty Python.



تتميز بايثون بمجتمعها النشط ، كما أن لها الكثير من المكتبات البرمجية ذات الأغراض الخاصة والتي برمجها أشخاص من مجتمع هذه اللغة ، مثلاً مكتبة PyGame التي توفر مجموعه من الوظائف من اجل برمجة الالعاب. ويمكن لبايثون التعامل مع العديد من أنواع قواعد البيانات مثل MySQL وغيره.



\\\\levelTwoTitle{أمثلة}


مثال Hello World!



\\\\begin{CodeBlock}{text}
print \\"Hello World!\\"
\\\\end{CodeBlock}



مثال لاستخراج المضروب Factorial :



\\\\begin{CodeBlock}{text}
num = 1
x = raw_input('Insert the number please ')
x = int(x)

if x > 69:
 print 'Math Error !'
else:
 while x > 1:
  num *= x
  x = x-1

 print num
\\\\end{CodeBlock}



\\\\levelTwoTitle{وصلات خارجية}


\\\\begin{itemize}
\\\\item \\\\externalLink{الموقع الرسمي للغة بايثون}{http://www.python.org}

بذرة حاس
\\\\end{itemize}"
`;

exports[`#misc properly renders backtick-escape.txt 1`] = `
"\`This also should not be in code.\`
\\\\textbackslash{}\\\\CodeInline{This should be in code.\\\\textbackslash{}\\\\textbackslash{}}
\`And finally this should not be in code.\`"
`;

exports[`#misc properly renders blank_lines_in_codeblocks.txt 1`] = `
"Preserve blank lines in code blocks with tabs:



\\\\begin{CodeBlock}{text}
a code block

two tabbed lines


three tabbed lines



four tabbed lines




five tabbed lines





six tabbed lines






End of tabbed block
\\\\end{CodeBlock}



And without tabs:



\\\\begin{CodeBlock}{text}
a code block

two blank lines


three blank lines



four blank lines




five blank lines





six blank lines






End of block
\\\\end{CodeBlock}



End of document"
`;

exports[`#misc properly renders blank-block-quote.txt 1`] = `
"aaaaaaaaaaa



\\\\begin{Quotation}

\\\\end{Quotation}



bbbbbbbbbbb"
`;

exports[`#misc properly renders block_html_attr.txt 1`] = `
"<blockquote>
Raw HTML processing should not confuse this with the blockquote below
</blockquote>
<div id=\\"current-content\\">
    <div id=\\"primarycontent\\" class=\\"hfeed\\">
        <div id=\\"post-\\">
            <div class=\\"page-head\\">
                <h2>Header2</h2>
            </div>
            <div class=\\"entry-content\\">
                <h3>Header3</h3>
                    <p>Paragraph</p>
                <h3>Header3</h3>
                    <p>Paragraph</p>
                    <blockquote>
                        <p>Paragraph</p>
                    </blockquote>
                    <p>Paragraph</p>
                    <p><a href=\\"/somelink\\">linktext</a></p>
            </div>
        </div><!-- #post-ID -->
        <!-- add contact form here -->
    </div><!-- #primarycontent -->
</div><!-- #current-content -->"
`;

exports[`#misc properly renders block_html_simple.txt 1`] = `
"<p>foo</p>
<ul>
<li>
<p>bar</p>
</li>
<li>
<p>baz</p>
</li>
</ul>"
`;

exports[`#misc properly renders block_html5.txt 1`] = `
"<section>
    <header>
        <hgroup>
            <h1>Hello :-)</h1>
        </hgroup>
    </header>
    <figure>
        <img src=\\"image.png\\" alt=\\"\\" />
        <figcaption>Caption</figcaption>
    </figure>
    <footer>
        <p>Some footer</p>
    </footer>
</section><figure></figure>"
`;

exports[`#misc properly renders blockquote.txt 1`] = `
"\\\\begin{Quotation}
blockquote with no whitespace before \\\\CodeInline{>}.
\\\\end{Quotation}



foo



\\\\begin{Quotation}
blockquote with one space before the \\\\CodeInline{>}.
\\\\end{Quotation}



bar



\\\\begin{Quotation}
blockquote with 2 spaces.
\\\\end{Quotation}



baz



\\\\begin{Quotation}
this has three spaces so its a paragraph.
\\\\end{Quotation}



blah



\\\\begin{CodeBlock}{text}
> this one had four so it's a code block.
\\\\end{CodeBlock}



\\\\begin{Quotation}
\\\\begin{Quotation}
this nested blockquote has 0 on level one and 3 (one after the first \\\\CodeInline{>} + 2 more) on level 2.
\\\\end{Quotation}

\\\\begin{Quotation}
and this has 4 on level 2 - another code block.
\\\\end{Quotation}
\\\\end{Quotation}"
`;

exports[`#misc properly renders blockquote-below-paragraph.txt 1`] = `
"Paragraph



\\\\begin{Quotation}
Block quote
Yep
\\\\end{Quotation}



Paragraph



\\\\begin{Quotation}
no space
Nope
\\\\end{Quotation}



Paragraph one



\\\\begin{Quotation}
blockquote
More blockquote.
\\\\end{Quotation}"
`;

exports[`#misc properly renders bold_links.txt 1`] = `"\\\\textbf{bold \\\\externalLink{link}{http://example.com}}"`;

exports[`#misc properly renders br.txt 1`] = `
"Output:



\\\\begin{CodeBlock}{text}
<p>Some of these words <em>are emphasized</em>.
Some of these words <em>are emphasized also</em>.</p>

<p>Use two asterisks for <strong>strong emphasis</strong>.
Or, if you prefer, <strong>use two underscores instead</strong>.</p>
\\\\end{CodeBlock}



Unordered (bulleted) lists use asterisks, pluses, and hyphens (\\\\CodeInline{*},
\\\\CodeInline{+}, and \\\\CodeInline{-}) as list markers. These three markers are
interchangable; this:"
`;

exports[`#misc properly renders bracket_re.txt 1`] = `
"[x
xxx xxx xxx xxx xxx xxx xxx xxx
xxx xxx xxx xxx xxx xxx xxx xxx
xxx xxx xxx xxx xxx xxx xxx xxx
xxx xxx xxx xxx xxx xxx xxx xxx
xxx xxx xxx xxx xxx xxx xxx xxx
xxx xxx xxx xxx xxx xxx xxx xxx
xxx xxx xxx xxx xxx xxx xxx xxx
xxx xxx xxx xxx xxx xxx xxx xxx
xxx xxx xxx xxx xxx xxx xxx xxx
xxx xxx xxx xxx xxx xxx xxx xxx
xxx xxx xxx xxx xxx xxx xxx xxx
xxx xxx xxx xxx xxx xxx xxx xxx
xxx xxx xxx xxx xxx xxx xxx xxx
xxx xxx xxx xxx xxx xxx xxx xxx
xxx xxx xxx xxx xxx xxx xxx xxx
xxx xxx xxx xxx xxx xxx xxx xxx
xxx xxx xxx xxx xxx xxx xxx xxx
xxx xxx xxx xxx xxx xxx xxx xxx
xxx xxx xxx xxx xxx xxx xxx xxx
xxx xxx xxx xxx xxx xxx xxx xxx
xxx xxx xxx xxx xxx xxx xxx xxx
xxx xxx xxx xxx xxx xxx xxx xxx
xxx xxx xxx xxx xxx xxx xxx xxx
xxx xxx xxx xxx xxx xxx xxx xxx
xxx xxx xxx xxx xxx xxx xxx xxx
xxx xxx xxx xxx xxx xxx xxx xxx
xxx xxx xxx xxx xxx xxx xxx xxx
xxx xxx xxx xxx xxx xxx xxx xxx
xxx xxx xxx xxx xxx xxx xxx xxx
xxx xxx xxx xxx xxx xxx xxx xxx
xxx xxx xxx xxx xxx xxx xxx xxx
xxx xxx xxx xxx xxx xxx xxx xxx
xxx xxx xxx xxx xxx xxx xxx xxx
xxx xxx xxx xxx xxx xxx xxx xxx
xxx xxx xxx xxx xxx xxx xxx xxx
xxx xxx xxx xxx xxx xxx xxx xxx
xxx xxx xxx xxx xxx xxx xxx xxx
xxx xxx xxx xxx xxx xxx xxx xxx
xxx xxx xxx xxx xxx xxx xxx xxx
xxx xxx xxx xxx xxx xxx xxx xxx
xxx xxx xxx xxx xxx xxx xxx xxx
xxx xxx xxx xxx xxx xxx xxx xxx
xxx xxx xxx xxx xxx xxx xxx xxx
xxx xxx xxx xxx xxx xxx xxx xxx
xxx xxx xxx xxx xxx xxx xxx xxx
xxx xxx xxx xxx xxx xxx xxx xxx
xxx xxx xxx xxx xxx xxx xxx xxx
xxx xxx xxx xxx xxx xxx xxx xxx
xxx xxx xxx xxx xxx xxx xxx xxx
xxx xxx xxx xxx xxx xxx xxx xxx
xxx xxx xxx xxx xxx xxx xxx xxx
xxx xxx xxx xxx xxx xxx xxx xxx
xxx xxx xxx xxx xxx xxx xxx xxx
xxx xxx xxx xxx xxx xxx xxx xxx
xxx xxx xxx xxx xxx xxx xxx xxx
xxx xxx xxx xxx xxx xxx xxx xxx
xxx xxx xxx xxx xxx xxx xxx xxx
xxx xxx xxx xxx xxx xxx xxx xxx
xxx xxx xxx xxx xxx xxx xxx xxx"
`;

exports[`#misc properly renders code-first-line.txt 1`] = `
"\\\\begin{CodeBlock}{text}
print \\"This is a code block.\\"
\\\\end{CodeBlock}"
`;

exports[`#misc properly renders comments.txt 1`] = `
"X<0



X>0



<!-- A comment -->

<div>as if</div>



<!-- comment -->

\\\\textbf{no blank line}"
`;

exports[`#misc properly renders div.txt 1`] = `
"<div id=\\"sidebar\\">

\\\\textit{foo}



</div>

And now in uppercase:



<DIV>
foo
</DIV>"
`;

exports[`#misc properly renders em_strong.txt 1`] = `
"One asterisk: *



One underscore: \\\\_



Two asterisks: **



With spaces: * *



Two underscores \\\\_\\\\_



with spaces: \\\\_ \\\\_



three asterisks: ***



with spaces: * * *



three underscores: \\\\_\\\\_\\\\_



with spaces: \\\\_ \\\\_ \\\\_



One char: \\\\textit{a}"
`;

exports[`#misc properly renders em-around-links.txt 1`] = `
"\\\\begin{itemize}
\\\\item \\\\textit{\\\\externalLink{Python in Markdown}{https://pythonhosted.org/Markdown/} by some
great folks} - This \\\\textit{does} work as expected.
\\\\item \\\\textit{\\\\externalLink{Python in Markdown}{https://pythonhosted.org/Markdown/} by some
great folks} - This \\\\textit{does} work as expected.
\\\\item \\\\externalLink{\\\\textit{Python in Markdown}}{https://pythonhosted.org/Markdown/} by some
great folks - This \\\\textit{does} work as expected.
\\\\item \\\\externalLink{\\\\textit{Python in Markdown}}{https://pythonhosted.org/Markdown/} \\\\textit{by some
great folks} - This \\\\textit{does} work as expected.
\\\\end{itemize}


\\\\textit{\\\\externalLink{Python in Markdown}{https://pythonhosted.org/Markdown/} by some
great folks} - This \\\\textit{does} work as expected."
`;

exports[`#misc properly renders email.txt 1`] = `
"asdfasdfadsfasd \\\\externalLink{yuri@freewisdom.org}{mailto:yuri@freewisdom.org} or you can say 
instead \\\\externalLink{yuri@freewisdom.org}{mailto:yuri@freewisdom.org}



\\\\externalLink{bob\\\\&sue@example.com}{mailto:bob\\\\&sue@example.com}"
`;

exports[`#misc properly renders escaped_chars_in_js.txt 1`] = `
"<span id=\\"e116142240\\">javascript protected email address\\\\ref{javascript protected email address}</span>



<script type=\\"text/javascript\\">
    var a=\\"gqMjyw7lZCaKk6p0J3uAUYS1.dbIW2hXzDHmiVNotOPRe_Ev@c4Gs58+LBr-F9QTfxn\\";
    var b=a.split(\\"\\").sort().join(\\"\\");
    var c=\\"F_-F6F_-FMe_\\";
    var d=\\"\\";
    for(var e=0;e<c.length;e++)
    d+=b.charAt(a.indexOf(c.charAt(e)));
        document
            .getElementById(\\"e116142240\\")
            .innerHTML=\\"<a href=\\\\\\"mailto:\\"+d+\\"\\\\\\">\\"+d+\\"</a>\\";
</script>"
`;

exports[`#misc properly renders h1.txt 1`] = `
"\\\\levelTwoTitle{Header}


\\\\levelOneTitle{Header 2}


\\\\levelThreeTitle{H3}


\\\\levelOneTitle{H1}


\\\\levelTwoTitle{H2}"
`;

exports[`#misc properly renders image.txt 1`] = `
"\\\\image{http://humane_man.jpg}



\\\\image{http://humane_man.jpg}



\\\\footnote{\\\\label{poster}\\\\externalLink{http://humane\\\\_man.jpg}{http://humane\\\\_man.jpg}}

\\\\image{}"
`;

exports[`#misc properly renders image_in_links.txt 1`] = `"\\\\externalLink{\\\\image{path/to/img_thumb.png}}{path/to/image.png}"`;

exports[`#misc properly renders image-2.txt 1`] = `
"\\\\externalLink{\\\\textit{link!}}{http://src.com/}



\\\\textit{\\\\externalLink{link}{http://www.freewisdom.org}}"
`;

exports[`#misc properly renders ins-at-start-of-paragraph.txt 1`] = `"<ins>Hello, fellow developer</ins> this ins should be wrapped in a p."`;

exports[`#misc properly renders inside_html.txt 1`] = `"<a href=\\"stuff\\"> \\\\textbf{ok}? </a>"`;

exports[`#misc properly renders lazy-block-quote.txt 1`] = `
"\\\\begin{Quotation}
Line one of lazy block quote.
Line two of lazy block quote.

Line one of paragraph two.
Line two of paragraph two.
\\\\end{Quotation}"
`;

exports[`#misc properly renders link-with-parenthesis.txt 1`] = `"\\\\externalLink{ZIP archives}{http://en.wikipedia.org/wiki/ZIP\\\\_(file\\\\_format)}"`;

exports[`#misc properly renders lists.txt 1`] = `
"\\\\begin{itemize}
\\\\item A multi-paragraph list, 
unindented.
\\\\end{itemize}


Simple tight list



\\\\begin{itemize}
\\\\item Uno
\\\\item Due
\\\\item Tri
\\\\end{itemize}


A singleton tight list:



\\\\begin{itemize}
\\\\item Uno
\\\\end{itemize}


A lose list:



\\\\begin{itemize}
\\\\item One
\\\\item Two
\\\\item Three
\\\\end{itemize}


A lose list with paragraphs



\\\\begin{itemize}
\\\\item One one one one

one one one one
\\\\item Two two two two
\\\\end{itemize}"
`;

exports[`#misc properly renders lists2.txt 1`] = `
"\\\\begin{itemize}
\\\\item blah blah blah
sdf asdf asdf asdf asdf
asda asdf asdfasd
\\\\end{itemize}"
`;

exports[`#misc properly renders lists3.txt 1`] = `
"\\\\begin{itemize}
\\\\item blah blah blah
sdf asdf asdf asdf asdf
asda asdf asdfasd
\\\\end{itemize}"
`;

exports[`#misc properly renders lists4.txt 1`] = `
"\\\\begin{itemize}
\\\\item item1
\\\\item item2

\\\\begin{enumerate}
\\\\item Number 1
\\\\item Number 2
\\\\end{enumerate}
\\\\end{itemize}"
`;

exports[`#misc properly renders lists5.txt 1`] = `
"\\\\begin{Quotation}
This is a test of a block quote
With just two lines
\\\\end{Quotation}



A paragraph



\\\\begin{Quotation}
This is a more difficult case
With a list item inside the quote

\\\\begin{itemize}
\\\\item Alpha
\\\\item Beta
Etc.
\\\\end{itemize}
\\\\end{Quotation}"
`;

exports[`#misc properly renders lists8.txt 1`] = `
"\\\\begin{enumerate}
\\\\item \\\\begin{Quotation}
Four-score and seven years ago...
\\\\end{Quotation}
\\\\item \\\\begin{Quotation}
We have nothing to fear...
\\\\end{Quotation}
\\\\item \\\\begin{Quotation}
This is it...
\\\\end{Quotation}
\\\\end{enumerate}


\\\\horizontalLine



\\\\begin{itemize}
\\\\item \\\\begin{Quotation}
Four-score and sever years ago
our fathers brought forth
\\\\end{Quotation}
\\\\item \\\\begin{Quotation}
We have nothing to fear
but fear itself
\\\\end{Quotation}
\\\\item \\\\begin{Quotation}
This is it
as far as I'm concerned
\\\\end{Quotation}
\\\\end{itemize}"
`;

exports[`#misc properly renders mismatched-tags.txt 1`] = `
"<p>Some text</p><div>some more text</div>



and a bit more



<p>And this output</p> \\\\textit{Compatible with PHP Markdown Extra 1.2.2 and Markdown.pl1.0.2b8:}



<!-- comment --><p><div>text</div><br /></p><br />

Should be in p"
`;

exports[`#misc properly renders multi-line-tags.txt 1`] = `
"<div>

asdf asdfasd



</div>

<div>

foo bar



</div>
No blank line."
`;

exports[`#misc properly renders multi-paragraph-block-quote.txt 1`] = `
"\\\\begin{Quotation}
This is line one of paragraph one
This is line two of paragraph one

This is line one of paragraph two

This is another blockquote.
\\\\end{Quotation}"
`;

exports[`#misc properly renders nested-patterns.txt 1`] = `
"\\\\textbf{\\\\textit{\\\\externalLink{link}{http://example.com}}}
\\\\textbf{\\\\textit{\\\\externalLink{link}{http://example.com}}}
\\\\textbf{\\\\externalLink{\\\\textit{link}}{http://example.com}}
\\\\textbf{\\\\externalLink{\\\\textit{link}}{http://example.com}}
\\\\textbf{\\\\externalLink{\\\\textit{link}}{http://example.com}}
\\\\textbf{\\\\externalLink{\\\\textit{link}}{http://example.com}}
\\\\externalLink{\\\\textbf{\\\\textit{link}}}{http://example.com}



\\\\textbf{\\\\textit{I am \\\\textbf{\\\\textit{italic} and} bold} I am \\\\CodeInline{just} bold}



Example \\\\textbf{\\\\textit{bold italic}} on the same line \\\\textbf{\\\\textit{bold italic}}.



Example \\\\textbf{\\\\textit{bold italic}} on the same line \\\\textbf{\\\\textit{bold italic}}."
`;

exports[`#misc properly renders normalize.txt 1`] = `"\\\\externalLink{Link}{http://www.stuff.com/q?x=1\\\\&y=2<>}"`;

exports[`#misc properly renders numeric-entity.txt 1`] = `
"\\\\externalLink{user@gmail.com}{mailto:user@gmail.com}



This is an entity: \\\\&\\\\#234;"
`;

exports[`#misc properly renders para-with-hr.txt 1`] = `
"Here is a paragraph, followed by a horizontal rule.



\\\\horizontalLine



Followed by another paragraph.



Here is another paragraph, followed by:
*** not an HR.
Followed by more of the same paragraph."
`;

exports[`#misc properly renders php.txt 1`] = `
"<!DOCTYPE HTML PUBLIC \\"-//W3C//DTD HTML 4.01//EN\\"
            \\"http://www.w3.org/TR/html4/strict.dtd\\">

<b>This should have a p tag</b>



<!--This is a comment -->

<div>This shouldn't</div>



<?php echo \\"block_level\\";?>

 <?php echo \\"not_block_level\\";?>"
`;

exports[`#misc properly renders russian.txt 1`] = `
"\\\\levelOneTitle{Недвард «Нед» Фландерс}


\\\\textbf{Недвард «Нед» Фландерс} (Nedward «Ned» Flanders) — вымышленный персонаж мультсериала «Симпсоны\\\\ref{симпсоны}», озвученный Гарри Ширером. Он и его семья живут по соседству от семьи Симпсонов. Набожный христианин, Нед является одним из столпов морали Спрингфилда. В эпизоде «Alone Again, Natura-Diddily»  он овдовел, его жена Мод погибла в результате несчастного случая.



Нед был одним из первых персонажей в мультсериале, который не был членом семьи Симпсонов. Начиная с первых серий, он регулярно появляется в «Симпсонах». Считается, что Нед Фландерс был назван в честь улицы \\\\textit{Northeast Flanders St.} в \\\\externalLink{Портленде}{http://www.portland.gov}, Орегон, родном городе создателя мультсериала Мэтта Грейнинга]]. Надпись на указателе улицы \\\\textit{NE Flanders St.} хулиганы часто исправляли на \\\\textit{NED Flanders St.}



\\\\levelTwoTitle{Биография}


Нед Фландерс родился в Нью-Йорке, его родители были битниками. Его отец в точности похож на взрослого Неда, только он носил козлиную бородку. Их отказ от воспитания Неда и то, что они, в общем-то, были плохими родителями («мы ничего в этом не понимаем и не знаем как начать») привело к тому, что Нед превратился в ужасного сорванца. В конце концов они согласились на экспериментальную восьмимесячную шлепологическую терапию Миннесотского Университета (воспоминания Неда в эпизоде «Hurricane Neddy»), которая научила его подавлять чувство злости. Побочным эфектом терапии стало то, что Нед стал ненавидеть своих родителей (это одна из двух вещей которые ненавидит Фландерс, вторая — отделения почты, чьи длинные очереди, суета и угрюмый персонал раздражают его).



У Неда есть странная привычка добавлять «дидли», «дадли» и другие бессмысленные слова в свои фразы при разговоре, например: «Hi-diddly-ho, neighbor-ino» («Приветик, соседушка»). Это результат сублимации его злости, вызванной сдерживанием гнева, который не имеет никакого другого выхода."
`;

exports[`#misc properly renders smart_em.txt 1`] = `
"\\\\textit{emphasis}



this\\\\textit{is}not\\\\_emphasis



\\\\textit{punctuation with emphasis}\\\\ref{_punctuation with emphasis_}



\\\\textit{punctuation}with\\\\textit{emphasis}\\\\ref{_punctuation_with_emphasis_}



punctuation\\\\textit{without}emphasis\\\\ref{punctuation_without_emphasis}"
`;

exports[`#misc properly renders span.txt 1`] = `
"<span id=\\"someId\\"> Foo \\\\textit{bar} Baz </span>



<div><b>\\\\textit{foo}</b></div>



<div id=\\"someId\\"> Foo \\\\textit{bar} Baz </div>



<baza id=\\"someId\\"> Foo \\\\textit{bar} Baz </baza>"
`;

exports[`#misc properly renders strong-with-underscores.txt 1`] = `"\\\\textbf{this\\\\textit{is}strong}"`;

exports[`#misc properly renders underscores.txt 1`] = `
"THIS\\\\textit{SHOULD}STAY\\\\textit{AS}IS



Here is some \\\\textit{emphasis}, ok?



Ok, at least \\\\textit{this} should work.



THIS\\\\textbf{SHOULD}STAY



Here is some \\\\textbf{strong} stuff.



THIS\\\\textbf{\\\\textit{SHOULD}}STAY?"
`;

exports[`#options properly renders no-attributes.txt 1`] = `
"Regression \\\\textit{test} for issue 87



It's run with enable\\\\_attributes=False so this \\\\{@id=explanation\\\\} should not become an attribute"
`;

exports[`#php properly renders Code Spans.txt 1`] = `
"From \\\\CodeInline{<!--} to \\\\CodeInline{-->}
on two lines.



From \\\\CodeInline{<!--}
to \\\\CodeInline{-->}
on three lines."
`;

exports[`#php properly renders Code block on second line.txt 1`] = `
"\\\\begin{CodeBlock}{text}
Codeblock on second line
\\\\end{CodeBlock}"
`;

exports[`#php properly renders Horizontal Rules.txt 1`] = `
"Horizontal rules:



\\\\horizontalLine



\\\\horizontalLine



\\\\horizontalLine



\\\\horizontalLine



\\\\horizontalLine



Not horizontal rules (testing for a bug in 1.0.1j):



+++



,,,



===



???



AAA



jjj



j j j



n n n"
`;

exports[`#php properly renders Inline HTML comments.txt 1`] = `
"Paragraph one.



<!-- double--dash (invalid SGML comment) -->

Paragraph two.



<!-- enclosed tag </div> -->

The end."
`;

exports[`#php properly renders MD5 Hashes.txt 1`] = `
"The MD5 value for \\\\CodeInline{+} is \\"26b17225b626fb9238849fd60eabdf60\\".



<p>test</p>



The MD5 value for \\\\CodeInline{<p>test</p>} is:



6205333b793f34273d75379350b36826"
`;

exports[`#pl #Tests_2007 properly renders Amps and angle encoding.txt 1`] = `
"AT\\\\&T has an ampersand in their name.



AT\\\\&amp;T is another way to write it.



This \\\\& that.



4 < 5.



6 > 5.



Here's a link\\\\ref{1} with an ampersand in the URL.



Here's a link with an amersand in the link text: AT\\\\&T\\\\ref{2}.



Here's an inline \\\\externalLink{link}{http://zestedesavoir.com/script?foo=1\\\\&bar=2}.



Here's an inline \\\\externalLink{link}{http://zestedesavoir.com/script?foo=1\\\\&bar=2}.



\\\\footnote{\\\\label{1}\\\\externalLink{http://example.com/?foo=1\\\\&bar=2}{http://example.com/?foo=1\\\\&bar=2}}

\\\\footnote{\\\\label{2}\\\\externalLink{http://att.com/}{http://att.com/}}"
`;

exports[`#pl #Tests_2007 properly renders Auto links.txt 1`] = `
"Link: \\\\externalLink{http://example.com/}{http://example.com/}.



With an ampersand: \\\\externalLink{http://example.com/?foo=1\\\\&bar=2}{http://example.com/?foo=1\\\\&bar=2}



\\\\begin{itemize}
\\\\item In a list?
\\\\item \\\\externalLink{http://example.com/}{http://example.com/}
\\\\item It should.
\\\\end{itemize}


\\\\begin{Quotation}
Blockquoted: \\\\externalLink{http://example.com/}{http://example.com/}
\\\\end{Quotation}



Auto-links should not occur here: \\\\CodeInline{<http://example.com/>}



\\\\begin{CodeBlock}{text}
or here: <http://example.com/>
\\\\end{CodeBlock}"
`;

exports[`#pl #Tests_2007 properly renders Blockquotes with code blocks.txt 1`] = `
"\\\\begin{Quotation}
Example:

\\\\begin{CodeBlock}{text}
sub status {
    print \\"working\\";
}
\\\\end{CodeBlock}

Or:

\\\\begin{CodeBlock}{text}
sub status {
    return \\"working\\";
}
\\\\end{CodeBlock}
\\\\end{Quotation}"
`;

exports[`#pl #Tests_2007 properly renders Horizontal rules.txt 1`] = `
"Dashes:



\\\\horizontalLine



\\\\horizontalLine



\\\\horizontalLine



\\\\horizontalLine



\\\\begin{CodeBlock}{text}
---
\\\\end{CodeBlock}



\\\\horizontalLine



\\\\horizontalLine



\\\\horizontalLine



\\\\horizontalLine



\\\\begin{CodeBlock}{text}
- - -
\\\\end{CodeBlock}



Asterisks:



\\\\horizontalLine



\\\\horizontalLine



\\\\horizontalLine



\\\\horizontalLine



\\\\begin{CodeBlock}{text}
***
\\\\end{CodeBlock}



\\\\horizontalLine



\\\\horizontalLine



\\\\horizontalLine



\\\\horizontalLine



\\\\begin{CodeBlock}{text}
* * *
\\\\end{CodeBlock}



Underscores:



\\\\horizontalLine



\\\\horizontalLine



\\\\horizontalLine



\\\\horizontalLine



\\\\begin{CodeBlock}{text}
___
\\\\end{CodeBlock}



\\\\horizontalLine



\\\\horizontalLine



\\\\horizontalLine



\\\\horizontalLine



\\\\begin{CodeBlock}{text}
_ _ _
\\\\end{CodeBlock}"
`;

exports[`#pl #Tests_2007 properly renders Inline HTML comments.txt 1`] = `
"Paragraph one.



<!-- This is a simple comment -->

<!--
	This is another comment.
-->

Paragraph two.



<!-- one comment block -- -- with two comments -->

The end."
`;

exports[`#pl #Tests_2007 properly renders Links, shortcut references.txt 1`] = `
"This is the simple case\\\\ref{simple case}.



\\\\footnote{\\\\label{simple case}\\\\externalLink{/simple}{http://zestedesavoir.com/simple}}

This one has a line
break\\\\ref{line break}.



This one has a line 
break\\\\ref{line break} with a line-ending space.



\\\\footnote{\\\\label{line break}\\\\externalLink{/foo}{http://zestedesavoir.com/foo}}

this\\\\ref{that} and the other\\\\ref{other}



\\\\footnote{\\\\label{this}\\\\externalLink{/this}{http://zestedesavoir.com/this}}

\\\\footnote{\\\\label{that}\\\\externalLink{/that}{http://zestedesavoir.com/that}}

\\\\footnote{\\\\label{other}\\\\externalLink{/other}{http://zestedesavoir.com/other}}"
`;

exports[`#pl #Tests_2007 properly renders Nested blockquotes.txt 1`] = `
"\\\\begin{Quotation}
foo

\\\\begin{Quotation}
bar
\\\\end{Quotation}

foo
\\\\end{Quotation}"
`;

exports[`#pl #Tests_2007 properly renders Ordered and unordered lists.txt 1`] = `
"Asterisks tight:



\\\\begin{itemize}
\\\\item asterisk 1
\\\\item asterisk 2
\\\\item asterisk 3
\\\\end{itemize}


Asterisks loose:



\\\\begin{itemize}
\\\\item asterisk 1
\\\\item asterisk 2
\\\\item asterisk 3
\\\\end{itemize}


\\\\horizontalLine



Pluses tight:



\\\\begin{itemize}
\\\\item Plus 1
\\\\item Plus 2
\\\\item Plus 3
\\\\end{itemize}


Pluses loose:



\\\\begin{itemize}
\\\\item Plus 1
\\\\item Plus 2
\\\\item Plus 3
\\\\end{itemize}


\\\\horizontalLine



Minuses tight:



\\\\begin{itemize}
\\\\item Minus 1
\\\\item Minus 2
\\\\item Minus 3
\\\\end{itemize}


Minuses loose:



\\\\begin{itemize}
\\\\item Minus 1
\\\\item Minus 2
\\\\item Minus 3
\\\\end{itemize}


Tight:



\\\\begin{enumerate}
\\\\item First
\\\\item Second
\\\\item Third
\\\\end{enumerate}


and:



\\\\begin{enumerate}
\\\\item One
\\\\item Two
\\\\item Three
\\\\end{enumerate}


Loose using tabs:



\\\\begin{enumerate}
\\\\item First
\\\\item Second
\\\\item Third
\\\\end{enumerate}


and using spaces:



\\\\begin{enumerate}
\\\\item One
\\\\item Two
\\\\item Three
\\\\end{enumerate}


Multiple paragraphs:



\\\\begin{enumerate}
\\\\item Item 1, graf one.

Item 2. graf two. The quick brown fox jumped over the lazy dog's
back.
\\\\item Item 2.
\\\\item Item 3.
\\\\end{enumerate}


\\\\begin{itemize}
\\\\item Tab

\\\\begin{itemize}
\\\\item Tab

\\\\begin{itemize}
\\\\item Tab
\\\\end{itemize}
\\\\end{itemize}
\\\\end{itemize}


Here's another:



\\\\begin{enumerate}
\\\\item First
\\\\item Second:

\\\\begin{itemize}
\\\\item Fee
\\\\item Fie
\\\\item Foe
\\\\end{itemize}
\\\\item Third
\\\\end{enumerate}


Same thing but with paragraphs:



\\\\begin{enumerate}
\\\\item First
\\\\item Second:

\\\\begin{itemize}
\\\\item Fee
\\\\item Fie
\\\\item Foe
\\\\end{itemize}
\\\\item Third
\\\\end{enumerate}


This was an error in Markdown 1.0.1:



\\\\begin{itemize}
\\\\item this

\\\\begin{itemize}
\\\\item sub
\\\\end{itemize}
that
\\\\end{itemize}"
`;

exports[`#pl #Tests_2007 properly renders Strong and em together.txt 1`] = `
"\\\\textbf{\\\\textit{This is strong and em.}}



So is \\\\textbf{\\\\textit{this}} word.



\\\\textbf{\\\\textit{This is strong and em.}}



So is \\\\textbf{\\\\textit{this}} word."
`;

exports[`#pl #Tests_2007 properly renders Tabs.txt 1`] = `
"\\\\begin{itemize}
\\\\item this is a list item
indented with tabs
\\\\item this is a list item
indented with spaces
\\\\end{itemize}


Code:



\\\\begin{CodeBlock}{text}
this code block is indented by one tab
\\\\end{CodeBlock}



And:



\\\\begin{CodeBlock}{text}
	this code block is indented by two tabs
\\\\end{CodeBlock}



And:



\\\\begin{CodeBlock}{text}
+	this is an example list item
	indented with tabs

+   this is an example list item
    indented with spaces
\\\\end{CodeBlock}"
`;

exports[`#pl #Tests_2007 properly renders Tidyness.txt 1`] = `
"\\\\begin{Quotation}
A list within a blockquote:

\\\\begin{itemize}
\\\\item asterisk 1
\\\\item asterisk 2
\\\\item asterisk 3
\\\\end{itemize}
\\\\end{Quotation}"
`;

exports[`#zds #extensions properly renders align.txt 1`] = `
"A simple paragraph




\\\\begin{center}
A centered paragraph


\\\\end{center}


a simple paragraph




\\\\begin{flushright}
A right aligned paragraph


\\\\end{flushright}


an other simple paragraph



A simple paragraph




\\\\begin{center}
A centered paragraph


\\\\end{center}


a simple paragraph




\\\\begin{flushright}
A right aligned paragraph


\\\\end{flushright}


an other simple paragraph




\\\\begin{center}
A centered paragraph.

Containing two paragraph


\\\\end{center}


an other simple paragraph




\\\\begin{center}
A right aligned paragraph.

Containing two paragraph


\\\\end{center}


an other simple paragraph




\\\\begin{center}
A centered paragraph.

An other centered paragraph.


\\\\end{center}


a simple paragraph



->A started block without end."
`;

exports[`#zds #extensions properly renders comments.txt 1`] = `
"BlablaBalbla



\\\\begin{CodeBlock}{text}
Blabla<--COMMENTS hahaha COMMENTS-->Balbla
\\\\end{CodeBlock}



<--COMMENTS Unfinished block"
`;

exports[`#zds #extensions properly renders customblock.txt 1`] = `
"\\\\begin{Spoiler}
Secret Block
\\\\end{Spoiler}


\\\\begin{Spoiler}
Secret Block
\\\\end{Spoiler}


\\\\begin{Spoiler}
another
\\\\end{Spoiler}


\\\\begin{Quotation}
\\\\begin{Spoiler}
\\\\begin{Quotation}
Blockquote in secret block in blockquote
\\\\end{Quotation}
\\\\end{Spoiler}
\\\\end{Quotation}



\\\\begin{Information}
Information Block
\\\\end{Information}


\\\\begin{Information}
an other
\\\\end{Information}


\\\\begin{Question}
Question Block
\\\\end{Question}


\\\\begin{Question}
an other
\\\\end{Question}


\\\\begin{Warning}
Attention Block
\\\\end{Warning}


\\\\begin{Warning}
an other
\\\\end{Warning}


\\\\begin{Error}
Erreur Block
\\\\end{Error}


\\\\begin{Error}
an other
\\\\end{Error}


[se\\\\ref{se}]
| not a block



[secretsecret\\\\ref{secretsecret}]
| not a block



[SECRET\\\\ref{secret}]
| not a block



\\\\begin{Spoiler}
Multiline block

\\\\begin{Quotation}
with blockquote !
\\\\end{Quotation}
\\\\end{Spoiler}


| Not a block



content before



\\\\begin{Spoiler}
A Block
\\\\end{Spoiler}


with content after



\\\\begin{Error}[a \\\\textbf{title}]
content
\\\\end{Error}


\\\\begin{Neutral}[a \\\\textbf{title}]
content
\\\\end{Neutral}"
`;

exports[`#zds #extensions properly renders delext.txt 1`] = `
"Blabla \\\\sout{truc} kxcvj \\\\sout{sdv sd} sdff



sdf \\\\sout{} df



sfdgs \\\\textasciitilde{} \\\\textasciitilde{} dfg \\\\textasciitilde{}\\\\textasciitilde{} dgsg \\\\textasciitilde{} qs"
`;

exports[`#zds #extensions properly renders emoticons.txt 1`] = `
"Lolilol  Hey







\\\\begin{Quotation}
Citation
\\\\end{Quotation}



Ce n'est pas une légende



\\\\image{https://zestedesavoir.com/media/galleries/3014/bee33fae-2216-463a-8b85-d1d9efe2c374.png}



ce n'est pas une légende non plus"
`;

exports[`#zds #extensions properly renders grid_tables.txt 1`] = `
"\\\\levelOneTitle{Grid table}


\\\\levelTwoTitle{Basic example}


\\\\begin{longtabu}{|p{\\\\linewidth / 4}|p{\\\\linewidth / 4}|p{\\\\linewidth / 4}|p{\\\\linewidth / 4}|} \\\\hline
\\\\multicolumn{2}{|c|}{Table Headings} & Here \\\\\\\\ \\\\hline
Sub & Headings & Too \\\\\\\\ \\\\hline
\\\\multirow{2}{*}{cell \\\\par spans \\\\par rows} & \\\\multicolumn{2}{|c|}{column spanning} \\\\\\\\ \\\\hline
normal & cell \\\\\\\\ \\\\hline
multi \\\\par line \\\\par  \\\\par cells \\\\par too & \\\\multicolumn{2}{|c|}{cells can be \\\\par \\\\textit{formatted} \\\\par \\\\textbf{paragraphs}} \\\\\\\\ \\\\hline
\\\\end{longtabu}



\\\\begin{longtabu}{|p{\\\\linewidth / 3}|p{\\\\linewidth / 3}|p{\\\\linewidth / 3}|} \\\\hline
A & B & C \\\\\\\\ \\\\hline
\\\\multirow{2}{*}{D} & \\\\multicolumn{2}{|c|}{E} \\\\\\\\ \\\\hline
F & G \\\\\\\\ \\\\hline
\\\\end{longtabu}



\\\\begin{longtabu}{|p{\\\\linewidth / 3}|p{\\\\linewidth / 3}|p{\\\\linewidth / 3}|} \\\\hline
\\\\multirow{3}{*}{A} & \\\\multicolumn{2}{|c|}{B} \\\\\\\\ \\\\hline
C & D \\\\\\\\ \\\\hline
\\\\multicolumn{2}{|c|}{E} \\\\\\\\ \\\\hline
\\\\end{longtabu}



\\\\begin{longtabu}{|p{\\\\linewidth / 3}|p{\\\\linewidth / 3}|p{\\\\linewidth / 3}|} \\\\hline
\\\\multicolumn{3}{|c|}{A} \\\\\\\\ \\\\hline
\\\\multirow{2}{*}{B} & C & \\\\multirow{2}{*}{D} \\\\\\\\ \\\\hline
E \\\\\\\\ \\\\hline
\\\\end{longtabu}



\\\\begin{longtabu}{|p{\\\\linewidth / 4}|p{\\\\linewidth / 4}|p{\\\\linewidth / 4}|p{\\\\linewidth / 4}|} \\\\hline
\\\\multirow{4}{*}{C} & \\\\multirow{2}{*}{D} & E \\\\\\\\ \\\\hline
F \\\\\\\\ \\\\hline
\\\\multirow{2}{*}{G} & H \\\\\\\\ \\\\hline
I \\\\\\\\ \\\\hline
\\\\end{longtabu}



\\\\begin{longtabu}{|p{\\\\linewidth / 4}|p{\\\\linewidth / 4}|p{\\\\linewidth / 4}|p{\\\\linewidth / 4}|} \\\\hline
A & \\\\multirow{2}{*}{B} & \\\\multirow{4}{*}{C} \\\\\\\\ \\\\hline
D \\\\\\\\ \\\\hline
E & \\\\multirow{2}{*}{F} \\\\\\\\ \\\\hline
G \\\\\\\\ \\\\hline
\\\\end{longtabu}



\\\\begin{longtabu}{|p{\\\\linewidth / 5}|p{\\\\linewidth / 5}|p{\\\\linewidth / 5}|p{\\\\linewidth / 5}|p{\\\\linewidth / 5}|} \\\\hline
A & B & C & D \\\\\\\\ \\\\hline
\\\\multicolumn{2}{|c|}{E} & \\\\multicolumn{2}{|c|}{F} \\\\\\\\ \\\\hline
\\\\multicolumn{4}{|c|}{G} \\\\\\\\ \\\\hline
\\\\end{longtabu}



\\\\begin{longtabu}{|p{\\\\linewidth / 5}|p{\\\\linewidth / 5}|p{\\\\linewidth / 5}|p{\\\\linewidth / 5}|p{\\\\linewidth / 5}|} \\\\hline
\\\\multicolumn{4}{|c|}{A} \\\\\\\\ \\\\hline
\\\\multicolumn{2}{|c|}{B} & \\\\multicolumn{2}{|c|}{C} \\\\\\\\ \\\\hline
D & E & F & G \\\\\\\\ \\\\hline
\\\\end{longtabu}



\\\\begin{longtabu}{|p{\\\\linewidth / 6}|p{\\\\linewidth / 6}|p{\\\\linewidth / 6}|p{\\\\linewidth / 6}|p{\\\\linewidth / 6}|p{\\\\linewidth / 6}|} \\\\hline
\\\\multirow{3}{*}{A} & \\\\multirow{2}{*}{B} & C & D & \\\\multirow{2}{*}{E} & \\\\multirow{3}{*}{F} \\\\\\\\ \\\\hline
\\\\multicolumn{2}{|c|}{G} \\\\\\\\ \\\\hline
\\\\multicolumn{4}{|c|}{H} \\\\\\\\ \\\\hline
\\\\multicolumn{6}{|c|}{I} \\\\\\\\ \\\\hline
\\\\end{longtabu}



\\\\begin{longtabu}{|p{\\\\linewidth / 2}|p{\\\\linewidth / 2}|} \\\\hline
A & \\\\multicolumn{6}{|c|}{B} \\\\\\\\ \\\\hline
\\\\multirow{4}{*}{C} & \\\\multirow{4}{*}{\\\\begin{longtabu}{|p{\\\\linewidth / 4}|p{\\\\linewidth / 4}|p{\\\\linewidth / 4}|p{\\\\linewidth / 4}|} \\\\hline \\\\par D & E & F & G \\\\\\\\ \\\\hline \\\\par \\\\multicolumn{4}{|c|}{H} \\\\\\\\ \\\\hline \\\\par \\\\end{longtabu}} \\\\\\\\ \\\\hline
 \\\\\\\\ \\\\hline
 \\\\\\\\ \\\\hline
 \\\\\\\\ \\\\hline
\\\\end{longtabu}



\\\\begin{longtabu}{|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|p{\\\\linewidth / 102}|} \\\\hline
H & \\\\multicolumn{16}{|c|}{} & He \\\\\\\\ \\\\hline
Li & Be & \\\\multirow{2}{*}{} & B & C & N & O & F & Ne \\\\\\\\ \\\\hline
Na & Mg & Al & Si & P & S & Cl & Ar \\\\\\\\ \\\\hline
K & Ca & Sc & Ti & V & Cr & Mn & Fe & Co & Ni & Cu & Zn & Ga & Ge & As & Se & Br & Kr \\\\\\\\ \\\\hline
Rb & Sr & Y & Zr & Nb & Mo & Tc & Ru & Rh & Pd & Ag & Cd & In & Sn & Sb & Te & I & Xe \\\\\\\\ \\\\hline
Cs & Ba & LAN & Hf & Ta & W & Re & Os & Ir & Pt & Au & Hg & Tl & Pb & Bi & Po & At & Rn \\\\\\\\ \\\\hline
Fr & Ra & ACT & \\\\multicolumn{15}{|c|}{} \\\\\\\\ \\\\hline
\\\\multicolumn{18}{|c|}{} \\\\\\\\ \\\\hline
\\\\multicolumn{3}{|c|}{Lanthanide} & La & Ce & Pr & Nd & Pm & Sm & Eu & Gd & Tb & Dy & Ho & Er & Tm & Yb & Lu \\\\\\\\ \\\\hline
\\\\multicolumn{3}{|c|}{Actinide} & Ac & Th & Pa & U & Np & Pu & Am & Cm & Bk & Cf & Es & Fm & Md & No & Lw \\\\\\\\ \\\\hline
\\\\end{longtabu}



\\\\begin{longtabu}{|p{\\\\linewidth / 1}|} \\\\hline
A \\\\\\\\ \\\\hline
\\\\end{longtabu}



Text at the end



\\\\begin{longtabu}{|p{\\\\linewidth / 1}|} \\\\hline
A \\\\\\\\ \\\\hline
\\\\end{longtabu}



Text at the



\\\\levelTwoTitle{specific tests}


In this examples, the second row should always be a full-cell



\\\\begin{longtabu}{|p{\\\\linewidth / 4}|p{\\\\linewidth / 4}|p{\\\\linewidth / 4}|p{\\\\linewidth / 4}|} \\\\hline
\\\\multicolumn{4}{|c|}{A} \\\\\\\\ \\\\hline
\\\\multicolumn{4}{|c|}{B | C} \\\\\\\\ \\\\hline
D & E & F & G \\\\\\\\ \\\\hline
\\\\end{longtabu}



\\\\begin{longtabu}{|p{\\\\linewidth / 4}|p{\\\\linewidth / 4}|p{\\\\linewidth / 4}|p{\\\\linewidth / 4}|} \\\\hline
A & \\\\multicolumn{3}{|c|}{} \\\\\\\\ \\\\hline
\\\\multicolumn{4}{|c|}{B | C} \\\\\\\\ \\\\hline
\\\\multicolumn{2}{|c|}{D   E} & F & G \\\\\\\\ \\\\hline
\\\\end{longtabu}



\\\\begin{longtabu}{|p{\\\\linewidth / 7}|p{\\\\linewidth / 7}|p{\\\\linewidth / 7}|p{\\\\linewidth / 7}|p{\\\\linewidth / 7}|p{\\\\linewidth / 7}|p{\\\\linewidth / 7}|} \\\\hline
A & B & C & D \\\\\\\\ \\\\hline
\\\\multicolumn{4}{|c|}{B | C} \\\\\\\\ \\\\hline
D & E & F & G \\\\\\\\ \\\\hline
\\\\end{longtabu}



\\\\begin{longtabu}{|p{\\\\linewidth / 7}|p{\\\\linewidth / 7}|p{\\\\linewidth / 7}|p{\\\\linewidth / 7}|p{\\\\linewidth / 7}|p{\\\\linewidth / 7}|p{\\\\linewidth / 7}|} \\\\hline
A & B & C & D \\\\\\\\ \\\\hline
\\\\multicolumn{4}{|c|}{B  | C} \\\\\\\\ \\\\hline
D & E & F & G \\\\\\\\ \\\\hline
\\\\end{longtabu}



\\\\levelTwoTitle{Failing example}


+--- A ---+



+---------+
+---------+



+---------+
| A       |
|         |



+---------+
| A       |
+=========+
| B       |
+=========+



+--- A ---+
|         |



\\\\begin{longtabu}{|p{\\\\linewidth / 1}|} \\\\hline
 \\\\\\\\ \\\\hline
\\\\end{longtabu}



Bug \\\\#107



\\\\begin{longtabu}{|p{\\\\linewidth / 6}|p{\\\\linewidth / 6}|p{\\\\linewidth / 6}|p{\\\\linewidth / 6}|p{\\\\linewidth / 6}|p{\\\\linewidth / 6}|} \\\\hline
 & \\\\multicolumn{2}{|c|}{case1} & \\\\multicolumn{2}{|c|}{case2} & case3 \\\\\\\\ \\\\hline
 & case4 & case5 & case6 & case7 &  \\\\\\\\ \\\\hline
X & X & X & X & X & X \\\\\\\\ \\\\hline
\\\\end{longtabu}"
`;

exports[`#zds #extensions properly renders kbd.txt 1`] = `
"Blabla \\\\keys{ok} kxcvj \\\\keys{ok foo} sdff



sdf |||| df



sfdgs | | dfg || dgsg | qs



With two pipes: ||key|| you'll get \\\\keys{key}.



It parses inline elements inside:



\\\\begin{itemize}
\\\\item \\\\keys{hell\\\\externalLink{\\\\sout{o}}{\\\\#he}?}
\\\\end{itemize}


but not block elements inside:



\\\\begin{itemize}
\\\\item \\\\keys{hello: [secret\\\\ref{secret}]?}
\\\\end{itemize}"
`;

exports[`#zds #extensions properly renders subsuperscript.txt 1`] = `
"Foo \\\\textsuperscript{sup} kxcvj \\\\textsuperscript{sup \\\\textit{string}} bar



not \\\\textasciicircum{} here



neither \\\\textasciicircum{} here \\\\textasciicircum{} because it's escaped



Foo \\\\textsubscript{sup} kxcvj \\\\textsubscript{sup \\\\textit{string}} bar



not \\\\textasciitilde{} here



neither \\\\textasciitilde{} here \\\\textasciitilde{} because it's escaped



foo \\\\textasciicircum{}\\\\textsuperscript{a}\\\\textasciicircum{} bar"
`;

exports[`#zds #extensions properly renders urlize.txt 1`] = `
"\\\\externalLink{http://www.google.fr}{http://www.google.fr}



\\\\externalLink{https://www.google.fr}{https://www.google.fr}



www.google.fr



google.fr



\\\\externalLink{http://www.google.fr}{http://www.google.fr}



Voici mon super lien qui termine une phrase \\\\externalLink{http://www.google.fr}{http://www.google.fr}.



\\\\externalLink{https://fr.wikipedia.org/wiki/Compactifié\\\\_d'Alexandrov}{https://fr.wikipedia.org/wiki/Compactifié\\\\_d'Alexandrov}



\\\\externalLink{https://fr.wikipedia.org/wiki/Compactifi\\\\%C3\\\\%A9\\\\_d\\\\%27Alexandrov}{https://fr.wikipedia.org/wiki/Compactifi\\\\%C3\\\\%A9\\\\_d\\\\%27Alexandrov}



javascript:alert\\\\%28'Hello\\\\%20world!'\\\\%29



vbscript:msgbox\\\\%28\\\\%22Hello\\\\%20world!\\\\%22\\\\%29



livescript:alert\\\\%28'Hello\\\\%20world!'\\\\%29



mocha:code\\\\ref{code})



jAvAsCrIpT:alert\\\\%28'Hello\\\\%20world!'\\\\%29



ja\\\\&\\\\#32;vas\\\\&\\\\#32;cr\\\\&\\\\#32;ipt:alert\\\\%28'Hello\\\\%20world!'\\\\%29



ja\\\\&\\\\#00032;vas\\\\&\\\\#32;cr\\\\&\\\\#32;ipt:alert\\\\%28'Hello\\\\%20world!'\\\\%29



ja\\\\&\\\\#x00020;vas\\\\&\\\\#32;cr\\\\&\\\\#32;ipt:alert\\\\%28'Hello\\\\%20world!'\\\\%29



ja\\\\%09\\\\&\\\\#x20;\\\\%0Avas\\\\&\\\\#32;cr\\\\&\\\\#x0a;ipt:alert\\\\%28'Hello\\\\%20world!'\\\\%29



ja\\\\%20vas\\\\%20cr\\\\%20ipt:alert\\\\%28'Hello\\\\%20world!'\\\\%29



live\\\\%20script:alert\\\\%28'Hello\\\\%20world!'\\\\%29



javascript:alert\\\\%29'XSS'\\\\%29



\\\\externalLink{sur isocpp.org}{https://isocpp.org/std/status}"
`;

exports[`#zds #extensions properly renders video.txt 1`] = `
"\\\\iframe(https://www.youtube.com/embed/BpJKvrjLUp0)[Video][]

\\\\iframe(https://www.dailymotion.com/embed/video/x2y6lhm)[Video][]

\\\\iframe(https://player.vimeo.com/video/133693532)[Video][]

!(https://screen.yahoo.com/weatherman-gives-forecast-using-taylor-191821481.html)



\\\\iframe(https://www.youtube.com/embed/BpJKvrjLUp0)[Video][]

\\\\iframe(https://youtube.com/embed/BpJKvrjLUp0)[Video][]

\\\\iframe(https://jsfiddle.net/Sandhose/BcKhe/1/embedded/result,js,html,css/)[Code][]

\\\\iframe(https://jsfiddle.net/zgjhjv9j/embedded/result,js,html,css/)[Code][]

\\\\iframe(https://jsfiddle.net/zgjhjv9j/1/embedded/result,js,html,css/)[Code][]

\\\\iframe(https://www.youtube.com/embed/1Bh4DZ2xGmw)[Video][]

\\\\iframe(http://player.ina.fr/player/embed/MAN9062216517/1/1b0bd203fbcd702f9bc9b10ac3d0fc21/560/315/1/148db8)[Video][]

This one should not be allowed:



!(http://jsfiddle.net/Sandhose/BcKhe/)



\\\\iframe(https://www.youtube.com/embed/BpJKvrjLUp0)[Video][]

with text after"
`;

exports[`#zds #extensions properly renders video_extra.txt 1`] = `
"\\\\iframe(https://www.youtube.com/embed/BpJKvrjLUp0)[Video][]

These ones should not be allowed by config:



!(http://jsfiddle.net/Sandhose/BcKhe/1/)



!(http://jsfiddle.net/zgjhjv9j/)



!(http://jsfiddle.net/zgjhjv9j/1/)



!(http://jsfiddle.net/Sandhose/BcKhe/)"
`;
